--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<p>Connect to Innovate, Solutions to Transform.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button primary">Sign Up</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="main" class="button">Learn More</a></li>
 					</ul>
 				</section>
 
@@ -58,11 +58,10 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Introducing the ultimate mobile app
+							<h2>Developing Singapore's built environment
 							<br />
-							for doing stuff with your phone</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							landscape with a platform</h2>
+							<p>Short description of your product here preferably between 2-3 lines</p>
 						</header>
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
