added header pic

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							landscape with a platform</h2>
 							<p>Short description of your product here preferably between 2-3 lines</p>
 						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image featured"><img src="images/header-min.jpg" alt="" /></span>
 					</section>
 
 					<section class="box special features">
