--- a/index.html
+++ b/index.html
@@ -78,20 +78,19 @@
 								<h3>Ipsum dolor</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
+						</div>
+						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-cloud accent4"></span>
 								<h3>Sed feugiat</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
-						</div>
-						<!-- <div class="features-row">
-							
-							<section>
+							<!-- <section>
 								<span class="icon solid major fa-lock accent5"></span>
 								<h3>Enim phasellus</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div> -->
+							</section> -->
+						</div>
 					</section>
 
 					<div class="row">
