edit css file to include feature-row

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
-						<div class="features-row">
-							<section style="align-content: center;">
+						<div class="feature-row">
+							<section>
 								<span class="icon solid major fa-cloud accent4"></span>
 								<h3>One-Stop Platform</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
