--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							</section>
 						</div>
 						<div class="feature-row">
-							<section>
+							<section style="align-content: center;">
 								<span class="icon solid major fa-cloud accent4"></span>
 								<h3>One-Stop Platform</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
