--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
-						<div class="feature-row">
-							<section style="align-content: center;">
+						<div class="features-row">
+							<section>
 								<span class="icon solid major fa-cloud accent4"></span>
 								<h3>One-Stop Platform</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
-							<!-- <section>
+							<section>
 								<span class="icon solid major fa-lock accent5"></span>
 								<h3>Enim phasellus</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section> -->
+							</section>
 						</div>
 					</section>
 
