--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
 					<section class="box special features">
 						<div class="features-row">
 							<section>
-								<span class="icon solid major fa-bolt accent2"></span>
+								<span class="icon solid major fa-hands-helping accent2"></span>
 								<h3>Strategic Collaboration</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 							<section>
-								<span class="icon solid major fa-chart-area accent3"></span>
+								<span class="icon solid major fa-landmark accent3"></span>
 								<h3>Government Participation</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
-								<span class="icon solid major fa-cloud accent4"></span>
+								<span class="icon solid major fa-compress-arrows-alt accent4"></span>
 								<h3>One-Stop Platform</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
