--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			<!-- CTA -->
 				<section id="cta">
 
-					<header>
+					<!-- <header>
 						<h2>Contact Us</h2>
 						<p>Tell us what you think about our little operation.</p>
 					</header>
@@ -149,9 +149,9 @@
 								</ul>
 							</div>
 						</div>
-					</form>
+					</form> -->
 
-					<!-- <h2>Contact Us</h2>
+					<h2>Contact Us</h2>
 					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
 
 					<form>
@@ -163,7 +163,7 @@
 								<input type="submit" value="Sign Up" class="fit" />
 							</div>
 						</div>
-					</form> -->
+					</form>
 
 				</section>
 
