--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 						</div>
 					</form> -->
 
-					<h2>Contact Us</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
+					<h2>Subscribe</h2>
+					<p>Interested in staying up to date with iBuildExchange? Subscribe to our mailing list!</p>
 
 					<form>
 						<div class="row gtr-50 gtr-uniform">
